<resources>
    <string name="app_name">FoobarScreen</string>
    <string name="tV_1">FOOBAR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up"><![CDATA[<u>Sign up</u>]]></string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="welcome">Welcome</string>
</resources>